--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,15 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.8.0</version>
         </dependency>
-<!--        -swagger-ui-->
+<!--        plus-->
+
+        <dependency>
+            <groupId>com.xzixi</groupId>
+            <artifactId>swagger2-plus</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <!--        -swagger-ui-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
