分页查询设备每页显示2条数据、解决get请求的数据响应到页面上都是乱码问题

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,4 +40,11 @@ http:
 
   staleConnectionCheckEnabled: true
 
+#pagehelper
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
 
