--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <!-- 表示依赖不会传递 -->
             <optional>true</optional>
         </dependency>
+<!--        分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
